[tool.poetry]
name = "project-ridgeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
dash = "^2.2.0"
plotly = "^5.6.0"
numpy = "^1.22.2"
dash-bootstrap-components = "^1.0.3"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
